# libdamla

./: .gitignore  LICENSE  README.md  setup.cfg  setup.py
src/libdamla/: __init__.py
src/libdamla/supar/: __init__.py  supar.py
test/: __init__.py  test_supar.py
