[metadata]
name = damla
version = 0.1.0
author = Kerem Göksu
author_email = superkerem13@gmail.com
description = Damla, a package manager for tr-lang
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/kaiserthe13th/libdamla
project_urls =
    Bug Tracker = https://github.com/kaiserthe13th/libdamla/issues
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src